# cpp_ex1

ex1/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  cpp_ex1.tar  mlpnetwork.exe.stackdump
ex2/: CMakeLists - school.txt  CMakeLists.txt  Fractal.cpp  Fractal.h  FractalDrawer.cpp  Makefile  ex2.tar
ex3/: CMakeLists.txt  Database.csv  HashMap.hpp  SpamDetector.cpp  text.txt
